--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     <!-- Bottom Navigation -->
 <div class="bottom-nav">
 <div class="container bottom-nav-container mx-auto">
-"<a href="https://produk-colletion.hellashop.web.id/" class="flex flex-col items-center text-bg-cyan-200"">"
+"<a href="hellashop.web.id	" class="flex flex-col items-center text-bg-cyan-200"">"
 <i class="fas fa-home text-lg"></i>
 <span class="text-xs mt-1">TOKO</span>
 </a>
