--- a/index.html
+++ b/index.html
@@ -349,14 +349,38 @@
     </section>
 
     <!-- Bottom Navigation -->
-<div class="bottom-nav">
-<div class="container bottom-nav-container mx-auto">
-"<a href="hellashop.web.id	" class="flex flex-col items-center text-bg-cyan-200"">"
-<i class="fas fa-home text-lg"></i>
-<span class="text-xs mt-1">TOKO</span>
-</a>
-</div>
-</div>
+    <div class="bottom-nav">
+        <div class="container bottom-nav-container mx-auto">
+            <a href="https://produk-colletion.hellashop.web.id/" class="flex flex-col items-center text-bg-cyan-200">
+                <i class="fas fa-home text-lg"></i>
+                <span class="text-xs mt-1">TOKO</span>
+            </a>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="premium-bg text-white py-8">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="mb-4 md:mb-0">
+                    <p class="text-blue-200 mt-2">© 2025 All Rights Reserved.</p>
+                </div>
+                <div class="flex space-x-4">
+                    <a href="#" class="w-10 h-10 rounded-full bg-blue-700 flex items-center justify-center hover:bg-blue-600 transition">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="w-10 h-10 rounded-full bg-blue-700 flex items-center justify-center hover:bg-blue-600 transition">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="#" class="w-10 h-10 rounded-full bg-blue-700 flex items-center justify-center hover:bg-blue-600 transition">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="border-t border-blue-700 mt-6 pt-6 text-center text-blue-200">
+            </div>
+        </div>
+    </footer>
 
     <script>
         // Countdown Timer
