--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Transprent Shoe Rack</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="https://cdn.orderonline.id/uploads/images_9747641756992316314.png">
+        <link rel="icon" href="https://cdn.orderonline.id/uploads/images_9623291757513477423.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
         
@@ -294,7 +294,7 @@
                         <div class="text-4xl md:text-5xl font-bold text-blue-900">Rp 215.000</div>
                         <p class="text-sm text-blue-900">BELI 1 GRATIS 1</p>
                         <div class="bg-yellow-400 text-blue-900 font-bold py-2 px-4 rounded-full mt-2">
-                            Anda Hemat Rp 44.000!
+                            DISCON 50%
                         </div>
                     </div>
                     <p class="text-blue-900 mb-6">Segera pesan sekarang sebelum promo berakhir!</p>
